--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -1,36 +1,37 @@
-# This is a basic workflow to help you get started with Actions
+name: DB Migration Caution
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
+    types: [opened, synchronize]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  commenter:
+    runs-on: self-hosted
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      # migration に変更が加えられた際に
+      - name: Detect migration
+        uses: dorny/paths-filter@v2
+        id: filter-migration
+        with:
+          filters: |
+            sqls:
+              - '**/migration/*.sql'
+      # コメントがすでに存在しないか確認し
+      - name: Check existing caution comment
+        uses: peter-evans/find-comment@v1
+        id: check-migration-comment
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: 'github-actions[bot]'
+          body-includes: Contains db migration!
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # コメントを追記
+      - name: Write DB migration caution comment
+        uses: peter-evans/create-or-update-comment@v1
+        if: steps.filter-migration.outputs.sqls == 'true' &&
+            steps.check-migration-comment.outputs.comment-id == ''
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Contains db migration!
