--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   commenter:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       # migration に変更が加えられた際に
       - name: Detect migration
