--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -21,6 +21,7 @@ jobs:
       
       # 上記のファイルを対象にgrep
       - name: Grep something
+        uses: actions/checkout@v2
         run: |
           echo ${{steps.filter-migration.outputs.sqls_files}}
           grep -i "drop" ${{steps.filter-migration.outputs.sqls_files}}
