--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -27,13 +27,13 @@ jobs:
           grep -i "drop" ${{steps.filter-migration.outputs.sqls_files}}
 
       # コメントがすでに存在しないか確認し
-      - name: Check existing caution comment
-        uses: peter-evans/find-comment@v1
-        id: check-migration-comment
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: 'github-actions[bot]'
-          body-includes: Contains db migration!
+      # - name: Check existing caution comment
+      #   uses: peter-evans/find-comment@v1
+      #   id: check-migration-comment
+      #   with:
+      #     issue-number: ${{ github.event.pull_request.number }}
+      #     comment-author: 'github-actions[bot]'
+      #     body-includes: Contains db migration!
 
       # コメントを追記
       - name: Write DB migration caution comment
