--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -18,13 +18,17 @@ jobs:
           filters: |
             sqls:
               - '**/migration/*.sql'
+      - name: debug
+        run: |
+          pwd
+          ls -la
       
       # 上記のファイルを対象にgrep
-      - name: Grep something
-        uses: actions/checkout@v2
-        run: |
-          echo ${{steps.filter-migration.outputs.sqls_files}}
-          grep -i "drop" ${{steps.filter-migration.outputs.sqls_files}}
+      # - name: Grep something
+      #   uses: actions/checkout@v2
+      #   run: |
+      #     echo ${{steps.filter-migration.outputs.sqls_files}}
+      #     grep -i "drop" ${{steps.filter-migration.outputs.sqls_files}}
 
       # コメントがすでに存在しないか確認し
       # - name: Check existing caution comment
