--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -31,10 +31,7 @@ jobs:
         run: |
           echo ${{steps.filter-migration.outputs.sqls_files}}
           drop_sqls=$(grep -il "drop" ${{steps.filter-migration.outputs.sqls_files}} || true)
-          echo "::set-output drop_sqls::$drop_sqls"
-      
-      - run: echo ${{ steps.grep-something.drop_sqls }}
-
+          echo $drop_sqls
 
       # コメントがすでに存在しないか確認し
       # - name: Check existing caution comment
