--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -19,7 +19,7 @@ jobs:
           pattern=$(IFS="|"; echo "${suspicious_keywords[*]}")
           migration_dir="./migration"
           suspicious_sqls=$(find ${migration_dir}/*.sql | xargs grep -li -E "${pattern}" || echo 'SUSPICIOUS_SQL_NOT_DETECTED')
-          suspicious_sqls="${suspicious_sqls//$'\n'/, }"
+          suspicious_sqls="${suspicious_sqls//$'\n'/,}"
           echo "::set-output name=suspicious-sqls::$suspicious_sqls"
 
       # 自動生成コードの削除or変更を検知
@@ -41,6 +41,15 @@ jobs:
       #     comment-author: 'github-actions[bot]'
       #     body-includes: Contains db migration!
 
+      - name: Format Comment Body
+        id: format-body
+        if: steps.grep-suspicious.outputs.suspicious-sqls != 'SUSPICIOUS_SQL_NOT_DETECTED' &&
+            steps.detect-change-auto-generated-file.outputs.model == 'true'
+        run: |
+          suspicious_sqls=${{ steps.grep-suspicious.outputs.suspicious-sqls }}
+          suspicious_sql_list="- ${suspicious_sqls//','/'%0A- '}"
+          echo "::set-output name=suspicious-sqls-list::$suspicious_sql_list"
+
       # コメントを追記
       - name: Write DB migration caution comment
         uses: peter-evans/create-or-update-comment@v1
@@ -52,7 +61,7 @@ jobs:
           body: |
             Contains db migration!
             ### SQLs
-            ${{ steps.grep-suspicious.outputs.suspicious-sqls }}
+            ${{ steps.format-body.outputs.suspicious-sqls-list }}
 
             ### Auto Generated Files
             ${{ steps.detect-change-auto-generated-file.outputs.model_files }}
