--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -66,6 +66,9 @@ jobs:
       - name: Check MD5
         id: check-md5
         uses: peter-evans/find-comment@v1
+        if: steps.detect-db-migration.outputs.sql == 'true' &&
+            steps.grep-suspicious.outputs.sqls != 'SUSPICIOUS_SQL_NOT_DETECTED' &&
+            steps.detect-model-change.outputs.model == 'true'
         with:
           issue-number: ${{github.event.pull_request.number}}
           comment-author: 'github-actions[bot]'
