--- a/.github/workflows/db-migration-caution.yml
+++ b/.github/workflows/db-migration-caution.yml
@@ -24,20 +24,19 @@ jobs:
               - 'migration/*.sql'
 
       # migration SQLを対象にキーワードでgrep
-      # output: sqls
+      # output: suspicious-sqls
       # - ヒットした場合はSQLファイルパスのカンマ区切り文字列
-      # - 1件もヒットしない場合は 'SUSPICIOUS_SQL_NOT_DETECTED' の文字列
+      # - 1件もヒットしない場合は 'NOT_DETECTED' の文字列
       - name: Grep Suspicious SQL
         id: grep-suspicious
         if: steps.detect-db-migration.outputs.sql == 'true'
         run: |
           suspicious_keywords=("drop table" "drop column")
-          pattern=$(IFS="|"; echo "${suspicious_keywords[*]}")
+          pattern=$(IFS="|"; echo "${suspicious_keywords[*]}") # キーワードのarrayを|でjoin的な
           echo ${{steps.detect-db-migration.outputs.sql_files}}
-          suspicious_sqls=$(grep -li -E "${pattern}" ${{steps.detect-db-migration.outputs.sql_files}} || echo 'SUSPICIOUS_SQL_NOT_DETECTED')
-          suspicious_sqls="${suspicious_sqls//$'\n'/,}"
-          suspicious_sqls="${suspicious_sqls//\.\//}"
-          echo "::set-output name=sqls::$suspicious_sqls"
+          suspicious_sqls=$(grep -li -E "${pattern}" ${{steps.detect-db-migration.outputs.sql_files}} || echo 'NOT_DETECTED')
+          suspicious_sqls="${suspicious_sqls//$'\n'/,}" # 複数行の文字列はoutputにできないため、\nをカンマに置換
+          echo "::set-output name=suspicious-sqls::$suspicious_sqls"
 
       # 自動生成されたModelファイルの削除or変更を検知
       # output: model 削除or変更が検知された際に 'true'
@@ -55,10 +54,10 @@ jobs:
       - name: Calc MD5
         id: calc-md5
         if: steps.detect-db-migration.outputs.sql == 'true' &&
-            steps.grep-suspicious.outputs.sqls != 'SUSPICIOUS_SQL_NOT_DETECTED' &&
+            steps.grep-suspicious.outputs.suspicious-sqls != 'NOT_DETECTED' &&
             steps.detect-model-change.outputs.model == 'true'
         run: |
-          md5=(`echo -n "${{steps.grep-suspicious.outputs.sqls}}${{steps.detect-model-change.outputs.model_files}}" | md5sum`)
+          md5=(`echo -n "${{steps.grep-suspicious.outputs.suspicious-sqls}}${{steps.detect-model-change.outputs.model_files}}" | md5sum`)
           echo $md5
           echo "::set-output name=md5::$md5"
 
@@ -67,7 +66,7 @@ jobs:
         id: check-md5
         uses: peter-evans/find-comment@v1
         if: steps.detect-db-migration.outputs.sql == 'true' &&
-            steps.grep-suspicious.outputs.sqls != 'SUSPICIOUS_SQL_NOT_DETECTED' &&
+            steps.grep-suspicious.outputs.suspicious-sqls != 'NOT_DETECTED' &&
             steps.detect-model-change.outputs.model == 'true'
         with:
           issue-number: ${{github.event.pull_request.number}}
@@ -81,10 +80,10 @@ jobs:
       - name: Format Comment Body
         id: format-body
         if: steps.detect-db-migration.outputs.sql == 'true' &&
-            steps.grep-suspicious.outputs.sqls != 'SUSPICIOUS_SQL_NOT_DETECTED' &&
+            steps.grep-suspicious.outputs.suspicious-sqls != 'NOT_DETECTED' &&
             steps.detect-model-change.outputs.model == 'true'
         run: |
-          suspicious_sqls=${{steps.grep-suspicious.outputs.sqls}}
+          suspicious_sqls=${{steps.grep-suspicious.outputs.suspicious-sqls}}
           suspicious_sql_list="- ${suspicious_sqls//','/'%0A- '}"
           echo "::set-output name=suspicious-sql-list::$suspicious_sql_list"
           model_files=${{steps.detect-model-change.outputs.model_files}}
@@ -95,7 +94,7 @@ jobs:
       - name: Write caution comment
         uses: peter-evans/create-or-update-comment@v1
         if: steps.detect-db-migration.outputs.sql == 'true' &&
-            steps.grep-suspicious.outputs.sqls != 'SUSPICIOUS_SQL_NOT_DETECTED' &&
+            steps.grep-suspicious.outputs.suspicious-sqls != 'NOT_DETECTED' &&
             steps.detect-model-change.outputs.model == 'true' &&
             steps.check-md5.outputs.comment-id == ''
         with:
